manifests/k8s_cluster/longhorn/node-disk-preparation.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-disk-preparation
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: node-disk-preparation
  template:
    metadata:
      labels:
        name: node-disk-preparation
    spec:
      hostNetwork: true
      hostPID: true
      containers:
      - name: sleep
        image: k8s.gcr.io/pause:3.1
      volumes:
      - name: host-root-volume
        hostPath:
          path: /mnt/k8s-data
